contrast correction

--- a/styles/base.css
+++ b/styles/base.css
@@ -85,5 +85,5 @@ ul {
 } */
 
 #lastModified {
-  color: #f2c14e;
+  color: #ffff00;
 }
